; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-hexdecoct.c_test_unbase64mem.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-hexdecoct.c_test_unbase64mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"Zg==\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"f\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"Zm8=\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"fo\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"Zm9v\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.7 = private unnamed_addr constant [9 x i8] c"Zm9vYg==\00", align 1
@.str.8 = private unnamed_addr constant [5 x i8] c"foob\00", align 1
@.str.9 = private unnamed_addr constant [9 x i8] c"Zm9vYmE=\00", align 1
@.str.10 = private unnamed_addr constant [6 x i8] c"fooba\00", align 1
@.str.11 = private unnamed_addr constant [9 x i8] c"Zm9vYmFy\00", align 1
@.str.12 = private unnamed_addr constant [7 x i8] c"foobar\00", align 1
@.str.13 = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.14 = private unnamed_addr constant [5 x i8] c" \0A\0D \00", align 1
@.str.15 = private unnamed_addr constant [17 x i8] c"    Zg\0A==       \00", align 1
@.str.16 = private unnamed_addr constant [8 x i8] c" Zm 8=\0D\00", align 1
@.str.17 = private unnamed_addr constant [14 x i8] c"  Zm9\0A\0D\0D\0Av   \00", align 1
@.str.18 = private unnamed_addr constant [13 x i8] c" Z m9vYg==\0A\0D\00", align 1
@.str.19 = private unnamed_addr constant [14 x i8] c" Zm 9vYmE=   \00", align 1
@.str.20 = private unnamed_addr constant [20 x i8] c"   Z m9v    YmFy   \00", align 1
@.str.21 = private unnamed_addr constant [2 x i8] c"A\00", align 1
@EPIPE = common dso_local global i32 0, align 4
@.str.22 = private unnamed_addr constant [6 x i8] c"A====\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.23 = private unnamed_addr constant [6 x i8] c"AAB==\00", align 1
@.str.24 = private unnamed_addr constant [12 x i8] c" A A A B = \00", align 1
@.str.25 = private unnamed_addr constant [18 x i8] c" Z m 8 = q u u x \00", align 1
@ENAMETOOLONG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_unbase64mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_unbase64mem() #0 {
  %1 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0)
  %2 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %3 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i32 0)
  %4 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i32 0)
  %5 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.7, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i64 0, i64 0), i32 0)
  %6 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.9, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.10, i64 0, i64 0), i32 0)
  %7 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.11, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.12, i64 0, i64 0), i32 0)
  %8 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0)
  %9 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0)
  %10 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.15, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 0)
  %11 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.16, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i32 0)
  %12 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.17, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i32 0)
  %13 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i64 0, i64 0), i32 0)
  %14 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.19, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.10, i64 0, i64 0), i32 0)
  %15 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.20, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.12, i64 0, i64 0), i32 0)
  %16 = load i32, i32* @EPIPE, align 4
  %17 = sub nsw i32 0, %16
  %18 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.21, i64 0, i64 0), i8* null, i32 %17)
  %19 = load i32, i32* @EINVAL, align 4
  %20 = sub nsw i32 0, %19
  %21 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.22, i64 0, i64 0), i8* null, i32 %20)
  %22 = load i32, i32* @EINVAL, align 4
  %23 = sub nsw i32 0, %22
  %24 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.23, i64 0, i64 0), i8* null, i32 %23)
  %25 = load i32, i32* @EINVAL, align 4
  %26 = sub nsw i32 0, %25
  %27 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.24, i64 0, i64 0), i8* null, i32 %26)
  %28 = load i32, i32* @ENAMETOOLONG, align 4
  %29 = sub nsw i32 0, %28
  %30 = call i32 @test_unbase64mem_one(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.25, i64 0, i64 0), i8* null, i32 %29)
  ret void
}

declare dso_local i32 @test_unbase64mem_one(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
